--- a/src/modules/wishlist/wishlist.scss
+++ b/src/modules/wishlist/wishlist.scss
@@ -101,6 +101,7 @@
   align-items: center;
   margin: 0 2px;
   position: relative;
+  cursor: pointer;
 
   &:hover {
     .toolTip {
@@ -143,6 +144,7 @@
   align-items: center;
   border-radius: 50%;
   margin: 0 2px;
+  cursor: default;
 }
 
 .addCollaborator {
