--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -72,7 +72,7 @@ h2 {
   @include letterSpacing(.5);
   @include padding(12,22);
   @include borderRadius(8);
-  min-width: 10rem;
+  min-width: 8rem;
   color: $white;
   outline: none;
   border: none;
@@ -106,6 +106,11 @@ h2 {
     font-family: $roboto-bold;
 
   }
+}
+
+.secondary-button {
+  @extend .primary-button;
+  background-color: grey;
 }
 
 .text-btn {
