--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -435,8 +435,17 @@ button {
 }
 
 .wishlist-container {
+  @include mobile {
+    overflow: hidden;
+  }
   div[class^="container"] {
     max-width: 90%;
+
+    @include mobile {
+      max-width: 100%;
+      padding-left: 2.5rem;
+      padding-right: 0;
+    }
   }
 }
 
