--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -464,12 +464,16 @@ button {
 .row-reverse {
   flex-direction: row-reverse;
 }
+
 .flex {
   display: flex;
 }
 
 .goldPackage {
-  margin-top: calc(-50px + -5.5rem);
+  margin-top: calc(-50px + -1.5rem);
+  @include tablet {
+    margin-top: calc(-50px + -5.5rem);
+  }
 
   /* Ahwanam styles */
 
@@ -737,10 +741,11 @@ button {
 
   .header-nav a img {
     z-index: 3;
-    width: 4.6875rem;
-    height: 4.6875rem;
-    max-width: 75px !important;
-    max-height: 75px;
+    // width: 4.6875rem;
+    // height: 4.6875rem;
+    @include mobile {
+      max-width: 75px !important;
+    }
   }
 
   .header-nav ul {
@@ -1789,7 +1794,10 @@ button {
 }
 
 .emeraldPackage {
-  margin-top: calc(-50px + -5.5rem);
+  margin-top: calc(-50px + -1.5rem);
+  @include tablet {
+    margin-top: calc(-50px + -5.5rem);
+  }
 
   * {
     margin: 0;
@@ -2740,6 +2748,7 @@ button {
       height: 100%;
     }
   }
+
   .slider-outer {
     padding: 0 20px;
   }
