home page animation fix and mobile ui

--- a/src/components/HorizontalSlider/horizontalSlider.scss
+++ b/src/components/HorizontalSlider/horizontalSlider.scss
@@ -73,6 +73,7 @@
   justify-content: center;
   align-items: center;
   color: $medium-pink;
+  background-color: $white;
   cursor: pointer;
   transition: all .7s ease;
 
