--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -147,3 +147,24 @@ h2 {
     display: none !important;
   }
 }
+.p-relative {
+  position: relative;
+}
+.no-padding-mobile {
+  @include mobile {
+    padding: 0;
+  }
+}
+.mobile-column {
+  @include mobile {
+    flex-direction: column !important;
+  }
+}
+.align-center {
+  align-items: center !important;
+}
+.mobile-col-reverse {
+  @include mobile {
+    flex-direction: column-reverse;
+  }
+}
