talk to ahwanam fixes

--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -39,7 +39,15 @@
   color: $bright-red;
   position: absolute;
   top: 7.5rem;
+
   &::first-letter {
     text-transform: capitalize;
   }
+}
+
+.closeBtn {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  cursor: pointer;
 }
