--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -16,7 +16,7 @@
   h1 {}
 
   h2 {
-    font-family: $roboto-bold;
+    // font-family: $roboto-medium;
     text-align: center;
     margin-bottom: 1rem;
 
@@ -77,7 +77,7 @@ hr {
 .button {
   @include borderRadius(3);
   @include padding(12,24);
-  font-family: $roboto-bold;
+  font-family: $roboto-medium;
   border-radius: .15rem;
   background-color: $primary-color;
   border: none;
@@ -480,7 +480,7 @@ a.button {
 }
 
 .author {
-  font-family: $roboto-bold !important;
+  font-family: $roboto-medium !important;
   @include fontSize(18.3, important=true);
   position: relative;
   padding-left: 45px;
@@ -548,7 +548,7 @@ a.button {
 
 .detailDesc {
   color: $secondary-color;
-  font-family: $roboto-bold;
+  font-family: $roboto-medium;
   font-size: 3.22rem;
 }
 
@@ -640,7 +640,7 @@ a.button {
 
   h3 {
     font-size: 2.5rem;
-    font-family: $roboto-bold !important;
+    font-family: $roboto-medium !important;
   }
 
   p {
@@ -885,6 +885,7 @@ h1.homeTitle {
       }
     }
   }
+  @extend %spacer;
 }
 
 .imageCardWrap {
