--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -445,7 +445,7 @@ button {
     @include mobile {
       max-width: 100%;
       padding-left: 2.5rem;
-      padding-right: 0;
+      padding-right: 2.5rem;
     }
   }
 }
