--- a/src/modules/wishlist/wishlist.scss
+++ b/src/modules/wishlist/wishlist.scss
@@ -104,6 +104,7 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 2rem;
+  flex-wrap: wrap;
 }
 
 .collaborator {
@@ -124,6 +125,10 @@
     .toolTip {
       display: block;
     }
+  }
+
+  @include mobile {
+    margin-bottom: 0.5rem;
   }
 }
 
