--- a/src/variables/_breakpoints.scss
+++ b/src/variables/_breakpoints.scss
@@ -6,6 +6,7 @@ $desktop: 'only screen and (min-width: 1024px)';
 $hd: 'only screen and (min-width: 1280px)';
 $hd-plus: 'only screen and (min-width: 1440px)';
 $full-hd: 'only screen and (min-width: 1850px)';
+$three-k: 'only screen and (min-width: 2800px)';
 $u-hd: 'only screen and (min-width: 3840px)';
 
 
