--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -608,7 +608,7 @@ a.button {
 
     &:last-child {
       z-index: 1;
-      transform: translate3d(-151%,-83rem,0px);
+      transform: translate3d(-164%,-83rem,0px);
 
       > img {
         width: 23rem;
@@ -683,7 +683,7 @@ a.button {
   left: 50%;
   bottom: -40%;
 }
-@keyframes example {
+@keyframes textanimation {
   from {
     transform: perspective(100px) rotateY(-65deg);
     opacity: 0;
@@ -701,7 +701,7 @@ a.button {
 
   div {
     > div {
-      animation-name: example;
+      animation-name: textanimation;
       animation-duration: 5s;
       display: inline-block;
       font-family: $frank-bold;
@@ -782,7 +782,7 @@ h1.homeTitle {
   @include mobile {
     max-width: 100%;
   }
-  max-width: 935px;
+  // max-width: 935px;
   margin: 0 auto;
   width: 70rem;
 }
@@ -792,7 +792,7 @@ h1.homeTitle {
   background-image: linear-gradient(116deg, $secondary-color, $lavender-pink);
   @include padding(80);
   border-radius: 6px;
-  max-width: 935px;
+  // max-width: 935px;
   position: relative;
   @include mobile {
     flex-direction: column;
@@ -892,7 +892,7 @@ h1.homeTitle {
     width: 100%;
   }
   @extend %spacer;
-  max-width: 901px;
+  // max-width: 901px;
   margin-left: auto;
   margin-right: auto;
   width: 64rem;
@@ -981,7 +981,7 @@ h1.homeTitle {
   box-shadow: 6px 11px 32px 0 rgba(41, 26, 204, 0.12);
   border: solid 1.5px #ffc8df;
   width: 62rem;
-  max-width: 871px;
+  // max-width: 871px;
   margin: 3rem auto 7rem;
   position: relative;
 
