--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2763,3 +2763,19 @@ button {
     padding: 0 20px;
   }
 }
+
+.pulsateRing {
+  border: 2px solid $secondary-color;
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
+  position: absolute;
+  animation: pulsate 1.5s ease-out;
+  animation-iteration-count: infinite; 
+  opacity: 0.0
+}
+@keyframes pulsate {
+  0% {opacity: 0.0;}
+  50% {opacity: 1.0;}
+  100% {transform: scale(1.5, 1.5); opacity: 0.0;}
+}
