--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -307,19 +307,19 @@
 }
 
 .delete-icon {
-  width: 18px;
-  height: 18px;
+  @include width(18);
+  @include height(18);
   position: absolute;
   right: 0;
   @include top(-24);
-  background: url('/images/close-nav.svg') center center no-repeat;
+  background: url('/images/delete.svg') center center no-repeat;
   background-size: contain;
   cursor: pointer;
 }
 
 .edit-icon {
-  width: 18px;
-  height: 18px;
+  @include width(18);
+  @include height(18);
   position: absolute;
   right: 2rem;
   @include top(-24);
