--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -29,7 +29,7 @@
 }
 
 .ceremony-cover {
-  @include height(700);
+  height: 50rem;
   position: relative;
 
   h1 {
@@ -60,8 +60,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
-  @include padding(0,0,24);
+  align-items: flex-start;
+  padding: 0 calc(7.5% + 15px) 2rem;
   h1 {
     letter-spacing: 1px;
   }
