--- a/src/components/compareProduct/compareProduct.scss
+++ b/src/components/compareProduct/compareProduct.scss
@@ -4,14 +4,21 @@
 
 .compareComponent {
   @include padding(32,28,0,28);
+
+  @include mobile {
+    padding-left: 0;
+  }
 }
 
 .vendorImage {
   @include height(250);
-  // @include width(403);
   width: 100%;
   max-height: 100%;
   @include borderRadius(18,18,0,0);
+
+  @include mobile {
+    height: 8rem;
+  }
 }
 
 .vendorInfo {
@@ -28,6 +35,12 @@
     @include fontSize(16);
   }
 
+  @include mobile {
+    background: inherit;
+    border-left: 1px solid rgba(0, 0, 0, 0.16);
+    border-right: 1px solid rgba(0, 0, 0, 0.16);
+  }
+
 }
 
 .price {
@@ -39,15 +52,28 @@
   span {
     color: $greyish-brown-five;
   }
+
+  @include mobile {
+    background: inherit;
+    border-left: 1px solid rgba(0, 0, 0, 0.16);
+    border-right: 1px solid rgba(0, 0, 0, 0.16);
+  }
+
 }
 
 .rating {
   background-color: $white-three;
   padding: 1rem 1rem 1px;
+
+  @include mobile {
+    background: inherit;
+    border-left: 1px solid rgba(0, 0, 0, 0.16);
+    border-right: 1px solid rgba(0, 0, 0, 0.16);
+  }
+
 }
 
 .galleryWrap {
-
   max-height: 30rem;
   overflow: auto;
   margin-top: 1rem;
@@ -55,11 +81,22 @@
   img {
     width: 47%;
     margin: 1.5%;
-    // @include height(107);
-    // height: auto;
     @include borderRadius(10);
   }
 
+  @include mobile {
+    width: 100%;
+    margin-top: 0;
+    background: inherit;
+    border-left: 1px solid rgba(0, 0, 0, 0.16);
+    border-right: 1px solid rgba(0, 0, 0, 0.16);
+
+    img {
+      width: 94%;
+      display: flex;
+      margin: 0 auto;
+    }
+  }
 }
 
 .removeBtn {
@@ -74,6 +111,16 @@
   justify-content: center;
   @include borderRadius(0,0,18,18);
   cursor: pointer;
+
+  @include mobile {
+    padding: 20px;
+    text-align: center;
+    margin: 0 0 20px;
+    background: inherit;
+    border-left: 1px solid rgba(0, 0, 0, 0.16);
+    border-right: 1px solid rgba(0, 0, 0, 0.16);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.16);
+  }
 }
 
 .closeBtnSmall {
