109-ui-ceremony-detail-screen

--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -72,7 +72,7 @@
 }
 
 .view-all {
-  color: $primary-color;
+  color: $secondary-color;
   @include fontSize(18);
   font-family: $roboto-medium;
   width: max-content;
