--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -407,3 +407,39 @@
     margin-right: 5px;
   }
 }
+.ceremonyCard {
+  border: solid 1px $medium-pink;
+  border-radius: 15px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: $medium-pink;
+  background-color: $white;
+  cursor: pointer;
+  transition: all .7s ease;
+
+  h3 {
+    font-family: $roboto-medium;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    text-align: center;
+    margin: 1rem 0 0;
+    text-transform: uppercase;
+  }
+
+  &:hover {
+    color: $white;
+    background-color: $medium-pink;
+  }
+}
+.ceremonyIg {
+  width: 100%;
+  height: 10VW;
+  border-radius: 15px;
+  background-size: cover;
+
+}
